Add JWT-based user authentication to SecretController
Updated SecretController to extract user information from JWT tokens in the Authorization header for creating and retrieving secrets. Secrets are now encrypted and decrypted using the user's password from the database. Also removed unused imports and updated security configuration to simplify request matchers.